test/langtools/tools/javac/T8326204b.out
T8326204b.java:10:36: compiler.err.invalid.yield
1 error
